--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,13 @@
         android:textStyle="bold"
         android:layout_marginTop="16dp"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        android:id="@+id/createacc"
+        />
+
     <GridLayout
         android:id="@+id/gridLayoutCategories"
         android:layout_width="match_parent"
