--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -7,114 +7,112 @@
     android:layout_height="match_parent"
     tools:context=".createPost">
 
-  <!-- res/layout/activity_create_post.xml -->
-  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:padding="16dp">
+  <TextView
+      android:id="@+id/titleLabel"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Title"
+      android:textSize="18sp"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginTop="16dp"/>
 
-    <TextView
-        android:id="@+id/titleLabel"
+  <EditText
+      android:id="@+id/editTextTitle"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:hint="Enter title"
+      app:layout_constraintTop_toBottomOf="@+id/titleLabel"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"/>
+
+  <TextView
+      android:id="@+id/categoryLabel"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Category"
+      android:textSize="18sp"
+      app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginTop="16dp"/>
+
+  <Spinner
+      android:id="@+id/categorySpinner"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      app:layout_constraintTop_toBottomOf="@+id/categoryLabel"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"/>
+
+  <TextView
+      android:id="@+id/descriptionLabel"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Description"
+      android:textSize="18sp"
+      app:layout_constraintTop_toBottomOf="@+id/categorySpinner"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginTop="16dp"/>
+
+  <EditText
+      android:id="@+id/editTextDescription"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:hint="Enter description"
+      app:layout_constraintTop_toBottomOf="@+id/descriptionLabel"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"/>
+
+  <TextView
+      android:id="@+id/contactLabel"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Preferred Method of Contact"
+      android:textSize="18sp"
+      app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginTop="16dp"/>
+
+  <RadioGroup
+      android:id="@+id/radioGroupContact"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintTop_toBottomOf="@+id/contactLabel"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginTop="8dp">
+
+    <RadioButton
+        android:id="@+id/radioEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Title"
-        android:textSize="18sp"
-        android:layout_marginTop="16dp"/>
+        android:text="Email"/>
 
-    <EditText
-        android:id="@+id/editTextTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter title"
-        android:layout_below="@id/titleLabel"
-        android:layout_marginTop="8dp"/>
-
-    <TextView
-        android:id="@+id/categoryLabel"
+    <RadioButton
+        android:id="@+id/radioPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Category"
-        android:textSize="18sp"
-        android:layout_below="@id/editTextTitle"
-        android:layout_marginTop="16dp"/>
+        android:text="Phone"/>
 
-    <Spinner
-        android:id="@+id/categorySpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/categoryLabel"
-        android:layout_marginTop="8dp"/>
-
-    <EditText
-        android:id="@+id/editTextOtherCategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Other"
-        android:layout_below="@id/categorySpinner"
-        android:layout_marginTop="8dp"
-        android:visibility="gone"/> <!-- Initially set to gone -->
-
-    <TextView
-        android:id="@+id/descriptionLabel"
+    <RadioButton
+        android:id="@+id/radioBoth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description"
-        android:textSize="18sp"
-        android:layout_below="@id/editTextOtherCategory"
-        android:layout_marginTop="16dp"/>
+        android:text="Both"/>
+  </RadioGroup>
 
-    <EditText
-        android:id="@+id/editTextDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter description"
-        android:layout_below="@id/descriptionLabel"
-        android:layout_marginTop="8dp"/>
-
-    <TextView
-        android:id="@+id/contactLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Preferred Method of Contact"
-        android:textSize="18sp"
-        android:layout_below="@id/editTextDescription"
-        android:layout_marginTop="16dp"/>
-
-    <RadioGroup
-        android:id="@+id/radioGroupContact"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/contactLabel"
-        android:layout_marginTop="8dp">
-
-      <RadioButton
-          android:id="@+id/radioEmail"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Email"/>
-
-      <RadioButton
-          android:id="@+id/radioPhone"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Phone"/>
-
-      <RadioButton
-          android:id="@+id/radioBoth"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Both"/>
-    </RadioGroup>
-
-    <Button
-        android:id="@+id/btnPost"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Post"
-        android:layout_below="@id/radioGroupContact"
-        android:layout_marginTop="16dp"/>
-  </RelativeLayout>
+  <Button
+      android:id="@+id/btnPost"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:text="Post"
+      app:layout_constraintTop_toBottomOf="@+id/radioGroupContact"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginTop="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
