--- a/app/src/main/res/drawable/border_blue.xml
+++ b/app/src/main/res/drawable/border_blue.xml
@@ -4,5 +4,5 @@
     <corners android:radius="8dp"/>
     <stroke
         android:width="2dp"
-    android:color="#B5D9F6"/>
+    android:color="@color/blue"/>
 </shape>
