--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".createPost">
+    android:orientation="vertical"
+    android:padding="16dp">
 
   <TextView
       android:id="@+id/titleLabel"
@@ -13,19 +12,14 @@
       android:layout_height="wrap_content"
       android:text="Title"
       android:textSize="18sp"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="16dp"/>
 
   <EditText
       android:id="@+id/editTextTitle"
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
-      android:hint="Enter title"
-      app:layout_constraintTop_toBottomOf="@+id/titleLabel"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"/>
+      android:hint="Enter title"/>
 
   <TextView
       android:id="@+id/categoryLabel"
@@ -33,18 +27,13 @@
       android:layout_height="wrap_content"
       android:text="Category"
       android:textSize="18sp"
-      app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
-      app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="16dp"/>
 
   <Spinner
       android:id="@+id/categorySpinner"
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="8dp"
-      app:layout_constraintTop_toBottomOf="@+id/categoryLabel"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"/>
+      android:layout_marginTop="8dp"/>
 
   <TextView
       android:id="@+id/descriptionLabel"
@@ -52,19 +41,14 @@
       android:layout_height="wrap_content"
       android:text="Description"
       android:textSize="18sp"
-      app:layout_constraintTop_toBottomOf="@+id/categorySpinner"
-      app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="16dp"/>
 
   <EditText
       android:id="@+id/editTextDescription"
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
-      android:hint="Enter description"
-      app:layout_constraintTop_toBottomOf="@+id/descriptionLabel"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"/>
+      android:hint="Enter description"/>
 
   <TextView
       android:id="@+id/contactLabel"
@@ -72,18 +56,13 @@
       android:layout_height="wrap_content"
       android:text="Preferred Method of Contact"
       android:textSize="18sp"
-      app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
-      app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="16dp"/>
 
   <RadioGroup
       android:id="@+id/radioGroupContact"
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
-      app:layout_constraintTop_toBottomOf="@+id/contactLabel"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="8dp">
 
     <RadioButton
@@ -107,12 +86,9 @@
 
   <Button
       android:id="@+id/btnPost"
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Post"
-      app:layout_constraintTop_toBottomOf="@+id/radioGroupContact"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="16dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
