Recent Listings added

--- a/app/src/main/res/layout/activity_listings.xml
+++ b/app/src/main/res/layout/activity_listings.xml
@@ -59,6 +59,7 @@
         android:layout_marginEnd="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/pencil" />
+        app:srcCompat="@drawable/pencil"
+        />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
