--- a/app/src/main/res/layout/item_posting.xml
+++ b/app/src/main/res/layout/item_posting.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layout_marginBottom="10sp"
+    android:background="@drawable/pill_background">
 
     <!-- Title, Description, and Category Label -->
     <LinearLayout
