--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -60,11 +60,10 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:gravity="center"
-            android:background="@drawable/border_blue"
             android:padding="10px"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="onRecentClick"/>
+            />
 
         <!-- Explore All Tab -->
         <TextView
@@ -73,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="All Listings"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="68dp"
             android:textSize="20sp"
             android:textStyle="bold"
             android:gravity="center"
@@ -85,11 +84,20 @@
 
     </LinearLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_below="@id/homePagePosts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
     <TextView
         android:id="@+id/textViewCategories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/homePagePosts"
+        android:layout_below="@id/recyclerView"
         android:text="Explore Categories"
         android:textSize="20sp"
         android:textStyle="bold"
