--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome, "
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="italic"/>
 
     <TextView
@@ -31,7 +31,7 @@
         android:layout_below="@+id/textViewAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="italic"/>
 
     <EditText
@@ -322,17 +322,19 @@
 
     </GridLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/gridLayoutCategories">
-
-        <Button
-            android:id="@+id/logoutBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Logout"/>
-    </RelativeLayout>
-
+    <!-- ImageButton for Profile -->
+    <ImageButton
+        android:id="@+id/profileBtn"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:src="@drawable/profile"
+        android:contentDescription="Profile"
+        android:scaleType="fitCenter"
+        android:onClick="onProfileClick"/>
 </RelativeLayout>
 </ScrollView>
