--- a/app/src/main/res/layout/content_myposts.xml
+++ b/app/src/main/res/layout/content_myposts.xml
@@ -15,10 +15,19 @@
         android:id="@+id/myListingsLayout"
         android:padding="16dp">
 
+        <Button
+            android:id="@+id/logoutBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Logout"
+            android:layout_marginBottom="10dp"/>
+
         <TextView
             android:id="@+id/textViewMyListings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/logoutBtn"
+            android:layout_marginTop="8dp"
             android:text="My Listings"
             android:textSize="24sp"
             android:textStyle="bold"/>
@@ -31,13 +40,14 @@
             android:layout_marginTop="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        />
+            />
 
         <TextView
             android:id="@+id/textViewMyRequests"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/recyclerViewMyPosts"
+            android:layout_marginTop="8dp"
             android:text="My Requests"
             android:textSize="24sp"
             android:textStyle="bold"/>
@@ -51,15 +61,5 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             />
-
-        <Button
-            android:id="@+id/logoutBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Logout"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/recyclerViewMyRequests"
-            android:layout_marginTop="16dp"/>
-
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
